--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "grammy": "^1.11.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "axios-proxy-fix": "^0.16.3",
+    "express": "^4.16.4"
   }
 }
