--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "grammy": "^1.11.2",
     "lodash": "^4.17.21",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "axios": "^1.3.4"
   }
 }
